sumo/tests/sumo/errors/meandata/meandata_edges_missing_begin1/errors.sumo
Error: The number of entries in dump-begins must be the same as in dump-ends.
Quitting (on error).
